--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,7 +13,9 @@
     "@types/express": "^4.17.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "5.11.15"
+    "mongoose": "5.11.15",
+    "multer": "^1.4.2",
+    "muter": "^0.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
